--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,9 @@
 body {
     padding-top: 5rem;
 }
+
+#container {
+    display: grid;
+    grid-template-columns: 500px 500px 500px;
+    grid-auto-rows: minmax(550px, auto);
+}
