--- a/app/templates/files.html
+++ b/app/templates/files.html
@@ -3,9 +3,11 @@
 {% block main %}
     {% include 'flash_messages.html' %}
     
-    <ul>
+    <div id="container">
         {% for file in image_list %}
-            <li> <img src="{{ url_for('static', filename = 'uploads/' + file) }}" /> </li>
+            <div>
+                <img src="{{ url_for('static', filename = 'uploads/' + file) }}" />
+            </div>
         {% endfor %}
-    </ul>
+    </div>
 {% endblock %}
